fix fonts and spacing according to rotem notes

--- a/src/storybook/components/link/link.scss
+++ b/src/storybook/components/link/link.scss
@@ -3,7 +3,7 @@
 .monday-storybook-link {
   display: inline-flex;
   &--small {
-    @include paragraph-text-without-color;
+    @include small-text-without-color;
   }
   &--medium {
     @include content-text-without-color;
