--- a/src/storybook/components/usage-guidelines/usage-guideline.scss
+++ b/src/storybook/components/usage-guidelines/usage-guideline.scss
@@ -2,7 +2,6 @@
 @import "../../styles/content-spacing";
 
 .monday-storybook-usage-guidelines{
-  margin-top: $spacing-between-section-items;
   &_guideline {
     color: var(--primary-text-color);
     margin: var(--spacing-medium) var(--spacing-small);
